srv: add direct API request for devices in edit mode + performance optimization for several API requests
