# server/modules/swagger.yml
@@ -106,12 +106,10 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"
+                $ref: "#/definitions/STATUS_SYSTEM"
 
   /send/{device}/{button}/:
     get:
@@ -136,12 +134,10 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"
+                $ref: "#/definitions/STATUS_SYSTEM"
 
   /send-data/{device}/{button}/{text}/:
     get:
@@ -170,12 +166,40 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"
+                $ref: "#/definitions/STATUS_SYSTEM"
+
+  /send-api/{device}/:
+    post:
+      operationId: modules.server_cmd.RemoteSendApiCmd
+      tags:
+        - send
+      summary: send API command for a specific command
+      description: send API command for a specific command and return answer given by the device
+      parameters:
+        - name: device
+          in: path
+          type: string
+          required: true
+        - name: api_command
+          in: body
+          schema:
+            type: string
+          required: true
+      responses:
+        200:
+          description: Successfully send IR command
+          schema:
+            properties:
+              API:
+                $ref: "#/definitions/API"
+              REQUEST:
+                $ref: "#/definitions/REQUEST"
+              STATUS:
+                $ref: "#/definitions/STATUS_SYSTEM"
+
 
   /set/{device}/{command}/{value}/:
     get:
@@ -230,12 +254,10 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"
+                $ref: "#/definitions/STATUS_SYSTEM"
 
 
   /macro/:
@@ -244,7 +266,7 @@ paths:
       tags:
         - send
       summary: edit marko
-      description: change markose
+      description: change marcos
       parameters:
         - name: macros
           in: body
@@ -258,12 +280,10 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"
+                $ref: "#/definitions/STATUS_SYSTEM"
 
 
 #------------------------ EDIT FUNCTIONS ------------------------
@@ -446,12 +466,10 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"               
+                $ref: "#/definitions/STATUS_SYSTEM"
     post:
       operationId: modules.server_cmd.RemoteEditScene
       tags:
@@ -475,12 +493,10 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"
+                $ref: "#/definitions/STATUS_SYSTEM"
     put:
       operationId: modules.server_cmd.RemoteAddScene
       tags:
@@ -504,12 +520,10 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"
+                $ref: "#/definitions/STATUS_SYSTEM"
                 
 #------------------------------------------------------
 
@@ -532,12 +546,10 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"               
+                $ref: "#/definitions/STATUS_SYSTEM"
     post:
       operationId: modules.server_cmd.RemoteEditDevice
       tags:
@@ -561,12 +573,10 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"
+                $ref: "#/definitions/STATUS_SYSTEM"
     put:
       operationId: modules.server_cmd.RemoteAddDevice
       tags:
@@ -590,12 +600,10 @@ paths:
             properties:
               API:
                 $ref: "#/definitions/API"
-              CONFIG:
-                $ref: "#/definitions/CONFIG"
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"
+                $ref: "#/definitions/STATUS_SYSTEM"
                 
 #------------------------------------------------------
 
@@ -659,7 +667,7 @@ paths:
               REQUEST:
                 $ref: "#/definitions/REQUEST"
               STATUS:
-                $ref: "#/definitions/STATUS"
+                $ref: "#/definitions/STATUS_SYSTEM"
 
   /main-audio/{device}/:
     post:
@@ -840,25 +848,20 @@ definitions:
     properties:
       devices:
         type: object
-        properties:
-          "<device-id>":
-            type: object
-            properties:
-              "<device-specific-key-value-pairs>":
-                type: string
       interfaces:
         type: object
-        properties:
-          "<api-interface>":
-            type: string
-      last_button:
-        type: string
+      scenes:
+        type: object
       request_time:
         type: object
-      scenes:
-        type: array
-        items:
-          type: string
+      system:
+        type: object
+      config_errors:
+        type: object
+
+  STATUS_SYSTEM:
+    type: object
+    properties:
       system:
         type: object
 
